# deltaic

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.md.license  example-config.yaml  poetry.lock.license  pyproject.toml  requirements.txt  s3backup  setup.py  tasks.py
.reuse/: dep5
deltaic/: __init__.py  cli.py  command.py  platform.py  prune.py  run.py  source.py  storage.py  template.py  util.py
deltaic/archivers/: __init__.py  aws.py  googledrive.py
deltaic/sources/: __init__.py  coda.py  github.py  rbd.py  rgw.py  rsync.py
multibackup/: __init__.py  command.py  lvm.py  platform.py  prune.py  run.py  scheduler.py  source.py  storage.py  template.py  util.py
multibackup/sources/: __init__.py  coda.py  github.py  rbd.py  rgw.py  rsync.py
src/deltaic/: __init__.py  cli.py  command.py  platform.py  prune.py  run.py  storage.py  template.py  util.py
src/deltaic/archivers/: __init__.py  aws.py  googledrive.py
src/deltaic/sources/: __init__.py  coda.py  github.py  rbd.py  rgw.py  rsync.py
